add some styling

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Summarizer</title>
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
+
     <script>
       //you can define JS code here
       function sumInputFields(){
